MMA-8263 Gjør typer i (u)ekspederteForsendelser tightere
- String -> Long, String -> LocalDateTime
- eksplisitt mapping til og fra LocalDateTime-format i json input og csv